# rusty_pipe_ui

./: .gitignore  Cargo.toml  Makefile.toml
.github/workflows/: libgenerate.yml
native/rustypipeuinative/: Cargo.toml  build.rs
native/rustypipeuinative/src/: lib.rs
